<resources>
    <string name="app_name">Babyfood</string>
    <string name="action_settings">Settings</string>
    <string name="introdution_me">Powered by Sir[Un]</string>

    <string name="facebook_app_id">168856303496515</string>

    <string name="food_in_week_certificate">Thực đơn tham khảo được cung cấp bởi Viện dinh dưỡng.</string>
    <!--for admod-->
    <string name="main_bottom_ad">ca-app-pub-4079505062217481/8737994059</string>

    <!--for drawer layout-->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="drawer_menu_remember">Nhớ và tránh</string>
    <string name="drawer_menu_nutrition_tower">Tháp dinh dưỡng</string>
    <string name="drawer_menu_below_one_year">0 - 1 Tuổi</string>
    <string name="drawer_menu_foods">Các món ăn</string>
    <string name="drawer_menu_description"> Description Icon</string>
    <string name="drawer_should">Nên nhớ</string>
    <string name="drawer_warning">Nên tránh</string>
    <string name="drawer_food_in_week">Thực đơn tham khảo</string>
    <string name="drawer_foods">Các món ăn</string>
    <string name="drawer_foods_below_8_months">Dưới 8 tháng</string>
    <string name="drawer_foods_9_11_months"> 9-11 tháng</string>
    <string name="drawer_foods_15_months">Dưới 15 tháng</string>
    <string name="drawer_foods_favorite">Yêu thích</string>

    <string name="advices_should">Nên nhớ</string>
    <string name="advices_warning">Nên tránh</string>

    <string name="main_screen_image_description">Main Background</string>
    <string name="main_fragment">Main Fragment</string>

    <string name="update_favorite_success">Cập nhật trạng thái Yêu thích thành công!</string>
    <string name="update_favorite_fail">Cập nhật trạng thái Yêu thích thất bại!</string>
    <string name="advices_fragment">Advices Fragment</string>
    <string name="advices_itemUrl">Item Url</string>
    <string name="advices_fragment_individual">Individual Advices Fragment</string>
    <string name="splash_image">Splash Image</string>

    <string name="close_image">Close Image</string>
    <string name="share_image">Share Image</string>
    <string name="add_image">Add Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="edit_image">Edit Image</string>
    <string name="add_image_preview">Add Image Preview</string>
    <string name="title_activity_refine_main">RefineMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="food_in_week_by_day">Day in Week</string>
    <string name="title_activity_reading">ReadingActivity</string>
    <string name="title_activity_reading_foods">ReadingFoodsActivity</string>

    <string name="reading_foods_fragment_time_prefix">Thời gian: %1$s</string>
    <string name="reading_foods_fragment_material">Nguyên liêu</string>
    <string name="reading_foods_fragment_method">Cách làm </string>

    <string name="add_activity_title">Tên</string>
    <string name="add_activity_advices_content">Nội dung</string>
    <string name="add_activity_foods_name">Tên món ăn</string>
    <string name="add_activity_foods_material">Nguyên liệu</string>
    <string name="add_activity_foods_method">Cách làm</string>
    <string name="add_activity_foods_time">Thời gian</string>
    <string name="add_activity_foods_time_hint">Nhập thời gian (phút)</string>

    <string name="add_activity_title_hint">Nhập tên</string>
    <string name="add_activity_material_hint">Nhập nguyên liệu</string>
    <string name="add_activity_food_method_hint">Nhập cách làm</string>
    <string name="add_activity_advices_content_hint">Nhập nội dung</string>
    <string name="add_activity_save">Lưu nội dung</string>

    <string name="dialog_choose_image_title">Chọn ảnh...</string>
    <string name="dialog_choose_image_capture">Chụp ảnh</string>
    <string name="dialog_choose_image_gallery">Từ bộ sưu tập</string>
    <string name="dialog_choose_image_cancel">Bỏ qua</string>

    <string name="delete_data_success">Xóa dữ liệu thành công!</string>
    <string name="delete_data_fail">Xóa dữ liệu thất bại!</string>

    <string name="food_in_week_item_time">Thời gian</string>
    <string name="food_in_week_item_content">Nội dung</string>
    <string name="food_in_week_item_method">Cách làm (hoặc định lượng)</string>

    <string name="favorite_foods_empty">Không có món ăn yêu thích. Hãy thêm món ăn yêu thích vào danh sách</string>

</resources>
