<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:background="@android:color/darker_gray"
    android:paddingBottom="5dp"
    android:orientation="horizontal">

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/food_in_week_item_time" />

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/food_in_week_item_content" />

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center"
        android:text="@string/food_in_week_item_method" />

</LinearLayout>