<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:tag="@string/main_fragment"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="7dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/main_remember_btn"
                    style="@style/MainButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="7dp"
                    android:layout_weight="1"
                    android:text="@string/drawer_menu_remember" />

                <Button
                    android:id="@+id/main_remember_nutrition_tower"
                    style="@style/MainButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="7dp"
                    android:layout_weight="1"
                    android:text="@string/drawer_menu_nutrition_tower" />

                <Button
                    android:id="@+id/main_below_one_year"
                    style="@style/MainButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="7dp"
                    android:layout_weight="1"
                    android:text="@string/drawer_menu_below_one_year" />

                <Button
                    android:id="@+id/main_foods"
                    style="@style/MainButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/drawer_menu_foods" />
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/main_screen_image_description"
                android:scaleType="fitXY"
                android:src="@mipmap/main_screen" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
