<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    tools:context="tannt275.babyfood.adapter.ReadingAdvicesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/reading_fragmentClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/app_close_icon"
                android:contentDescription="@string/close_image" />

            <View
                android:id="@+id/adjustView"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/reading_fragmentShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/adjustView"
                android:contentDescription="@string/share_image"
                android:src="@mipmap/app_share_icon" />

            <ImageView
                android:id="@+id/reading_fragmentAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/reading_fragmentShare"
                android:contentDescription="@string/add_image"
                android:src="@mipmap/app_add_icon" />

            <ImageView
                android:id="@+id/reading_fragmentDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/adjustView"
                android:contentDescription="@string/delete_image"
                android:src="@mipmap/app_delete_icon_actived" />

            <ImageView
                android:id="@+id/reading_fragmentEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/reading_fragmentDelete"
                android:contentDescription="@string/edit_image"
                android:src="@mipmap/app_edit_icon_actived" />

            <TextView
                android:id="@+id/reading_fragmentPosition"
                style="@style/TextFontHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="3dp"
                android:text="22/99"
                android:textColor="@android:color/holo_red_light" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/reading_fragmentUrl"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/advices_itemUrl"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/reading_fragmentName"
                style="@style/TextFontHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/itemUrl"
                android:padding="5dp"
                android:text="@string/app_name" />
        </RelativeLayout>

        <TextView
            android:id="@+id/reading_fragmentContent"
            style="@style/TextFontNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/app_name" />
    </LinearLayout>
</ScrollView>
