<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tannt275.babyfood.AddingActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/addingToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:id="@+id/addImageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/add_activity_ImagePreview"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/add_image_preview"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/add_activity_captureButton"
                    style="@style/MessengerButton.White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="Choose Photo" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/add_activity_title_prefix"
                    style="@style/TextFontHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/add_activity_title" />

                <EditText
                    android:id="@+id/add_activity_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/add_activity_edittext_selector"
                    android:focusable="false"
                    android:hint="@string/add_activity_title_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="10dp" />

                <LinearLayout
                    android:id="@+id/add_activity_materialLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextFontHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/add_activity_foods_time" />

                    <EditText
                        android:id="@+id/add_activity_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/add_activity_edittext_selector"
                        android:focusable="false"
                        android:hint="@string/add_activity_foods_time_hint"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/add_activity_materialPrefix"
                        style="@style/TextFontHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/add_activity_foods_material" />

                    <EditText
                        android:id="@+id/add_activity_material"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/add_activity_edittext_selector"
                        android:focusable="false"
                        android:hint="@string/add_activity_material_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/add_activity_method_prefix"
                        style="@style/TextFontHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/add_activity_foods_method" />

                    <EditText
                        android:id="@+id/add_activity_method"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/add_activity_edittext_selector"
                        android:focusable="false"
                        android:hint="@string/add_activity_food_method_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:padding="10dp"
                        android:scrollbars="vertical" />
                </LinearLayout>

                <Button
                    style="@style/MessengerButton.White"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_activity_save" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
