<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:tag="@string/advices_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/shouldLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_advices_header">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/adjust_should"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/app_remember_icon" />

                <TextView
                    style="@style/TextFontHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="7dp"
                    android:layout_toRightOf="@id/adjust_should"
                    android:text="@string/advices_should" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:background="@drawable/selector_advices_header"
            android:id="@+id/forgetLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/adjust_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/app_warning_icon" />

                <TextView
                    style="@style/TextFontHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="7dp"
                    android:layout_toRightOf="@id/adjust_warning"
                    android:text="@string/advices_warning" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/indicatorLayout"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <View
            android:id="@+id/indicatorShould"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />

        <View
            android:id="@+id/indicatorForget"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:alpha="0.3"
            android:background="@color/colorPrimary" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/advicesViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>